break words to prevent overflow

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,6 +10,7 @@
  * {
   font-family: 'Roboto', sans-serif;
   list-style: none;
+  word-wrap: break-word;
  }
  .shared-links-div > * {
   display: flex;
